# uyha.github.io

./: .buildinfo  blog.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/random/: index.doctree  misc.doctree
.doctrees/technical/: dbus-systemd.doctree  index.doctree  misc.doctree
.github/workflows/: static.yml
_sources/: index.rst.txt
_sources/random/: index.rst.txt  misc.rst.txt
_sources/technical/: cheat-sheet.rst.txt  dbus-systemd.rst.txt  index.rst.txt  misc.rst.txt
_static/: custom.css  favicon
blog/: drafts.html
docs/: genindex.html  index.html  objects.inv  search.html
random/: index.html  misc.html
source/: about_me.rst  conf.py  index.rst
source/articles/: building-a-peripheral-library-part1.rst  building-a-peripheral-library-with-modern-cpp-part1.rst  index.rst  peripheral-modern-cpp-part1.rst
source/programming/: index.rst  peripheral-modern-cpp-part1.rst
source/random/: index.rst  settling_in_finland.rst
technical/: cheat-sheet.html  dbus-systemd.html  index.html  misc.html
