[tool.poetry]
name = "uyha-github-io"
version = "0.1.0"
description = "A personal about random stuff that I do"
authors = ["Uy Ha <hchanuy@gmail.com>"]
readme = "README.md"
packages = [{include = "uyha"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.1.3"
ablog = "^0.10.33.post1"
pydata-sphinx-theme = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
